# SmolVLA

./: .gitignore  .gitmodules  LICENSE  README.md
deployment/: navigation.py  package.xml  place_prompt_node.py  setup.cfg  setup.py
deployment/config/: topomap_nav.yaml
deployment/config/topomap/: topomap.yaml  topomap_features.npy
deployment/launch/: smolvla_nav.launch.py
deployment/smolvla_nav/: create_topomap.py  image_convert.py  navigation.py  place_prompt_node.py  toponav.py
training/: loss_to_tb.py
training/data/: lerobot_dataset.py  paraphrases.json
